Fixed loading widget position and header mobile search spacing

--- a/public/css/partials/_header.scss
+++ b/public/css/partials/_header.scss
@@ -397,7 +397,7 @@ header {
 			margin: 0;
 			padding: 0;
 			position: relative;
-			top: 65px;
+			top: 63px;
 
 
 			@include breakpoint($min, $pre-tablet) {
@@ -453,7 +453,7 @@ header {
 					}
 					&.search-the-website {
 						background-color: #10a2cf;
-						right: 0;
+						right: 2px;
 
 						@include breakpoint($min, $pre-tablet) {
 							background-color: #FFF;
@@ -491,13 +491,14 @@ header {
 			width: 99.5%;
 			border: 1px solid #B4AEA9;
 			margin: 0;
-			padding: 5px;
+			padding: 9px 5px;
 			position: absolute;
 			top: 8px;
-			font-size: 16px;
+			font-size: 17px;
 			line-height: initial !important; //NYPLBase override
 
 			@include breakpoint($min, $pre-tablet) {
+				font-size: 16px;
 				display: inline-block;
 				position: relative;
 				top: inherit;
